--- a/src/components/trends/Search/Search.module.scss
+++ b/src/components/trends/Search/Search.module.scss
@@ -2,10 +2,11 @@
 
 .trendsSearch {
   padding: 3%;
-  background-color: #f2f9f8;
+  background-color: lighten($headerBGColor, 10%);
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: white;
   h3 {
     margin-bottom: 3%;
   }
