--- a/src/components/trends/Results/Results.module.scss
+++ b/src/components/trends/Results/Results.module.scss
@@ -1,70 +1,95 @@
+@import '~styles/utils.scss';
+
 .trendsResultAll {
   margin: 0 auto;
   margin-top: 2%;
-  width: 60%; /* 80? */
+  max-width: $app_width;
+  height: 100%;
+  @include media('<medium') {
+    margin: 0 3%;
+  }
 }
 
-/* 검색어 */
 .searchWord {
   text-align: center;
-  margin-bottom: 3%;
+  margin: 3% auto;
+
+  h4 {
+    margin-top: 1%;
+  }
 }
 
-.searchWord h4 {
-  margin-top: 1%;
-}
-
-/* 관심도 변화 */
-.changeInterest {
+.section {
   padding: 2%;
+  box-shadow: $shadow2dp;
+  background-color: white;
+  overflow-x: auto;
+  h5 {
+    margin-bottom: 2%;
+  }
+  .graph {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    > div {
+      display: flex;
+      justify-content: center;
+    }
+  }
 }
 
-.changeInterest h5 {
-  margin-bottom: 2%;
+.section + .section {
+  margin-top: 3rem;
 }
-.changeInterestGraph {
-  border: 1px solid black;
-  width: 100%;
-  line-height: 15;
-  text-align: center;
-}
-
-/* 성별,연령별 */
-.typeInterest {
-  padding: 2%;
-  margin-top: 2%;
-}
-
-.typeInterestGraph {
-  border: 1px solid black;
-  width: 100%;
-  line-height: 15;
-  text-align: center;
+.relate {
+  display: flex;
+  padding: 0;
+  > div {
+    flex: 1;
+    h5 {
+      padding: 4%;
+      margin-bottom: 0;
+    }
+  }
 }
 
-/**/
-.topicNsearch {
-  padding: 2%;
-  margin-top: 2%;
-}
-/* 관련 주제 */
-.trendsTopic {
-  width: 50%;
-  float: left;
+.list {
+  height: 280px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  font-size: 1.1rem;
+  .item {
+    color: black;
+    width: 100%;
+    height: 56px;
+    display: flex;
+    padding-left: 3%;
+    margin-left: 5%;
+    align-items: center;
+    border-bottom: 1px solid $gray;
+    &:hover {
+      cursor: pointer;
+      padding-left: 5%;
+      margin-left: 2%;
+      background-color: lighten($gray, 10%);
+    }
+  }
+  .number {
+    font-weight: 500;
+    margin-right: 1.3rem;
+  }
+  .contents {
+    flex: 1;
+  }
+  .null {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
-.wordRanking {
-  margin-top: 2%;
-}
-
-.wordRanking hr {
-  width: 95%;
-}
-.wordRanking span {
-  font-weight: 600;
-}
-/* 관련 검색어 */
 .trendsSearchWord {
   width: 50%;
-  float: right;
 }
