--- a/src/components/trends/Search/Search.module.scss
+++ b/src/components/trends/Search/Search.module.scss
@@ -1,31 +1,71 @@
 @import '~styles/utils.scss';
 
 .trendsSearch {
-  padding: 3%;
   background-color: lighten($headerBGColor, 10%);
   display: flex;
+  padding: 3%;
+  height: 22rem;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   color: white;
   h3 {
-    margin-bottom: 3%;
+    margin-bottom: 3rem;
   }
 }
 
-.trendsSearch .memberSearch {
-  margin-bottom: 2%;
-}
-.memberSear img {
-  width: 1.2rem;
+.input {
+  display: flex;
+  align-items: center;
+  max-width: 500px;
+  width: 100%;
+  input {
+    border-radius: 0.2rem;
+    padding: 0.375rem 0.75rem;
+    flex: 1;
+    margin-right: 3%;
+    height: 3rem;
+    border: 1px solid #99bddc;
+  }
+  button {
+    height: 3rem;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
-.memberSear input {
-  border-radius: 0.2rem;
-  width: 350px;
-  height: 40px;
-  border: 1px solid #99bddc;
+.recentlyKeywords {
+  margin: 0 auto;
+  margin-top: 3rem;
+  width: $app_width * 0.8;
+  @include media('<medium') {
+    width: 95%;
+  }
+  height: 300px;
 }
 
-.memberSear .btn-primary {
-  width: 45px;
+.list {
+  margin-top: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  box-shadow: $shadow2dp;
+  justify-content: space-between;
+  width: 100%;
+  background-color: $gray;
+  > a {
+    width: 50%;
+    color: black;
+    padding: 0 1rem;
+    line-height: 4rem;
+    height: 4rem;
+    margin-bottom: 1px;
+    cursor: pointer;
+    background-color: white;
+
+    &:hover {
+      background-color: lighten($gray, 10%);
+    }
+  }
 }
