--- a/src/components/mindmap/Aside/Aside.module.scss
+++ b/src/components/mindmap/Aside/Aside.module.scss
@@ -1,25 +1,51 @@
 @import '~styles/utils.scss';
 
+$boxWidth: 300px;
+
 .bodyRight {
-  width: 20%;
+  width: $boxWidth + 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   height: 100%;
+  overflow-y: auto;
   padding-top: 4rem;
   padding-bottom: 3.5rem;
   position: absolute;
   bottom: 0;
   right: 0;
   box-shadow: $shadow2dp;
-  background-color: #f2f9f8; /*99bddc  c5e6ef   baabcf */
+  background-color: rgba(#f2f9f8, 0.7); /*99bddc  c5e6ef   baabcf */
 }
-
 .recommendBoxList {
-  padding: 8%;
+  padding: 1.4rem;
+}
+.section {
+  .keyword {
+    border-bottom: 1px solid gray;
+    margin-bottom: 1rem;
+    font-weight: 500;
+    font-size: 1.1rem;
+    padding: 0.3rem 0;
+  }
+}
+.section + .section {
+  margin-top: 10%;
 }
 
 .recommendBox {
-  padding: 2%;
+  width: $boxWidth;
+  height: 4rem;
+  padding: 3%;
   background-color: white;
   box-shadow: $shadow2dp;
+  .recommendIdea {
+    font-size: 1rem;
+    margin: 0.3rem 0;
+  }
+  .recommendHash {
+    font-size: 0.8rem;
+  }
 }
 
 .recommendBox + .recommendBox {
