--- a/src/components/trends/Results/Results.module.scss
+++ b/src/components/trends/Results/Results.module.scss
@@ -21,6 +21,7 @@
 
 .section {
   padding: 2%;
+  min-height: 10rem;
   box-shadow: $shadow2dp;
   background-color: white;
   overflow-x: auto;
@@ -41,6 +42,7 @@
   display: flex;
   padding: 0;
   > div {
+    height: 100%;
     flex: 1;
     h5 {
       padding: 4%;
