--- a/src/components/trends/Search/Search.module.scss
+++ b/src/components/trends/Search/Search.module.scss
@@ -43,7 +43,7 @@
   @include media('<medium') {
     width: 95%;
   }
-  height: 300px;
+  height: 100%;
 }
 
 .list {
@@ -53,6 +53,7 @@
   box-shadow: $shadow2dp;
   justify-content: space-between;
   width: 100%;
+  height: 100%;
   background-color: $gray;
   > a {
     width: 50%;
