--- a/src/components/base/ProgressIndicator/ProgressIndicator.module.scss
+++ b/src/components/base/ProgressIndicator/ProgressIndicator.module.scss
@@ -12,7 +12,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-bottom: 20rem;
+  padding-bottom: 10%;
+  z-index: 999;
 }
 
 .spinner {
