--- a/src/components/user/Modify/Modify.module.scss
+++ b/src/components/user/Modify/Modify.module.scss
@@ -8,6 +8,9 @@
   }
 }
 .section {
+  box-shadow: $shadow2dp;
+  padding: 1rem;
+
   button {
     background-color: lighten($gray, 10%) !important;
     font-weight: 600;
@@ -92,6 +95,7 @@
   }
   .caution {
     color: darken(red, 10%) !important;
+    margin-bottom: 2rem;
   }
 }
 .section + .section {
