Main Page Notifications at 2019-05-04

--- a/src/components/base/PageTemplate/PageTemplate.module.scss
+++ b/src/components/base/PageTemplate/PageTemplate.module.scss
@@ -1,5 +1,6 @@
+@import '~styles/utils.scss';
+
 .App {
-  padding-bottom: 5%;
-  min-height: 100vh;
+  min-height: calc(100vh - $headerHeight);
   height: 100%;
 }
