--- a/src/components/main/MainWrapper/MainWrapper.module.scss
+++ b/src/components/main/MainWrapper/MainWrapper.module.scss
@@ -3,7 +3,8 @@
 .main_wrapper {
   height: 100%;
   max-width: $app_width;
-  margin: 3rem auto;
+  margin: 0 auto;
+  padding-top: 3%;
   margin-bottom: 0;
   @include media('<medium') {
     max-width: 90%;
