--- a/src/components/trends/Results/Results.module.scss
+++ b/src/components/trends/Results/Results.module.scss
@@ -2,9 +2,11 @@
 
 .trendsResultAll {
   margin: 0 auto;
-  margin-top: 2%;
-  max-width: $app_width;
   height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   @include media('<medium') {
     margin: 0 3%;
   }
@@ -12,8 +14,11 @@
 
 .searchWord {
   text-align: center;
-  margin: 3% auto;
-
+  padding: 1% 0;
+  background-color: white;
+  width: 100%;
+  box-shadow: $shadow2dp;
+  margin-bottom: 3%;
   h4 {
     margin-top: 1%;
   }
@@ -21,6 +26,8 @@
 
 .section {
   padding: 2%;
+  max-width: $app_width;
+  width: 100%;
   min-height: 10rem;
   box-shadow: $shadow2dp;
   background-color: white;
