--- a/src/components/base/Card/Notification/Notification.module.scss
+++ b/src/components/base/Card/Notification/Notification.module.scss
@@ -9,30 +9,7 @@ $spaceImgToActivity: 1rem;
   @include media('<medium') {
     padding: 1rem 0;
   }
-  .header {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    .img {
-      @include avartar;
-      img {
-        width: 100%;
-        height: 100%;
-      }
-    }
-    .activity {
-      margin: 0 $spaceImgToActivity;
-      a {
-        margin-right: 0.3rem;
-      }
-    }
-    .date {
-      color: gray;
-      @include media('<medium') {
-        display: none;
-      }
-    }
-  }
+
   .detail {
     background-color: white;
     min-height: 4rem;
@@ -75,4 +52,36 @@ $spaceImgToActivity: 1rem;
 }
 .feed + .feed {
   border-top: 1px solid $gray;
+}
+.header {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  .img {
+    @include avartar;
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .activity {
+    flex: 1;
+    margin: 0 $spaceImgToActivity;
+    a {
+      margin-right: 0.3rem;
+    }
+  }
+  .date {
+    color: gray;
+    @include media('<medium') {
+      display: none;
+    }
+  }
+}
+.headerNotify {
+  width: 400px;
+  height: 4rem;
+  font-size: 0.8rem;
+  display: flex;
+  align-items: center;
 }
