--- a/src/components/mindmap/Footer/Footer.module.scss
+++ b/src/components/mindmap/Footer/Footer.module.scss
@@ -10,6 +10,7 @@
   align-items: flex-end;
   .brainStatus {
     width: 10%;
+    min-width: 100px;
     background-color: transparent;
     margin-right: 3%;
   }
