User Info Update at 2019-05-09

--- a/src/components/auth/AuthWrapper/AuthWrapper.module.scss
+++ b/src/components/auth/AuthWrapper/AuthWrapper.module.scss
@@ -5,7 +5,8 @@
   top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 1rem;
+  padding: 2rem;
+  box-shadow: $shadow2dp;
 
   @include media('<medium') {
     width: 100%;
