--- a/src/components/base/Intro/Intro.css
+++ b/src/components/base/Intro/Intro.css
@@ -1,11 +1,11 @@
-*::-webkit-scrollbar,
-*::-webkit-scrollbar-thumb {
+.startAll::-webkit-scrollbar,
+.startAll::-webkit-scrollbar-thumb {
   color: lightgray;
   width: 25px;
   border: 10px solid transparent;
 }
 
-*::-webkit-scrollbar-thumb {
+.startAll::-webkit-scrollbar-thumb {
   box-shadow: inset 0 0 0 10px;
 }
 
