--- a/src/components/mindmap/Footer/Footer.module.scss
+++ b/src/components/mindmap/Footer/Footer.module.scss
@@ -6,14 +6,81 @@
   bottom: 0;
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+
   .brainStatus {
-    width: 10%;
-    min-width: 100px;
-    background-color: transparent;
-    margin-right: 3%;
+    width: 100%;
     z-index: 0;
   }
+}
+
+.chat {
+  display: flex;
+  flex-direction: column;
+  z-index: 100;
+  box-shadow: $shadow4dp;
+  position: absolute;
+  height: 50vh;
+  width: 100%;
+  bottom: 3.5rem;
+  max-width: 400px;
+  .list {
+    flex: 1;
+    padding: 0.5rem;
+    border-bottom: 1px solid $gray;
+    overflow-y: scroll;
+    > div + div {
+      margin-top: 0.5rem;
+    }
+
+    .line {
+      display: flex;
+      align-items: center;
+    }
+    .user {
+      background-color: #ff7043;
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
+      margin-right: 0.5rem;
+    }
+    .message {
+      flex: 1;
+      background-color: $gray;
+      border-radius: 0.5rem;
+      padding: 0.2rem 0.5rem;
+    }
+  }
+  .send {
+    display: flex;
+    align-items: center;
+    padding: 0.3rem 0.5rem;
+    input {
+      flex: 1;
+      border: none;
+      margin-right: 0.5rem;
+      &:focus {
+        outline-width: 0;
+      }
+    }
+    .submit {
+      color: white;
+      cursor: pointer;
+      font-weight: 400;
+      font-size: 0.9rem;
+      background-color: #ff7043;
+      padding: 0.2rem 0.5rem;
+      border-radius: 0.5rem;
+      border: 1px solid darken(#ff7043, 10%);
+    }
+  }
+}
+.slider {
+  position: absolute;
+  right: 0;
+  bottom: 3.7rem;
+  width: 10%;
+  min-width: 100px;
+  margin-right: 3%;
 }
 
 .brainFooter {
@@ -42,11 +109,16 @@
 }
 .brainRightFooter {
   > div {
+    img {
+      width: 2rem;
+      height: 2rem;
+      border-radius: 5px;
+    }
     @include media('<medium') {
       display: none;
     }
   }
   > div + div {
-    margin-left: 10px;
+    margin-left: 1rem;
   }
 }
