--- a/src/components/repository/New/New.module.scss
+++ b/src/components/repository/New/New.module.scss
@@ -77,3 +77,19 @@
     }
   }
 }
+
+.datePicker {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 999;
+  background-color: rgba(#000, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  > div {
+    background-color: white;
+  }
+}
