--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Nanum+Gothic');
+@import url('https://unpkg.com/ionicons@4.5.5/dist/css/ionicons.min.css');
 
 body {
   all: unset;
