--- a/src/components/base/Intro/Intro.css
+++ b/src/components/base/Intro/Intro.css
@@ -10,6 +10,9 @@
 }
 
 /* First */
+.startFirst {
+  background-color: white;
+}
 .startFirst .fullscreen {
   height: 100vh;
 }
@@ -123,6 +126,7 @@ h1 span {
 /* Second */
 .startSecond {
   position: relative;
+  background-color: white;
   height: 100vh;
 }
 
