--- a/src/components/explore/ExploreWrapper/ExploreWrapper.module.scss
+++ b/src/components/explore/ExploreWrapper/ExploreWrapper.module.scss
@@ -13,13 +13,20 @@ $height: 20rem;
   justify-content: center;
   align-items: center;
   background-color: lighten($headerBGColor, 10%);
+  @include media('<medium') {
+    padding: 3%;
+  }
 }
 
 .newsList {
   display: flex;
-  max-width: $app_width;
   height: 20rem;
   justify-content: space-between;
+  max-width: $app_width;
+  @include media('<medium') {
+    overflow-x: scroll;
+    overflow-y: hidden;
+  }
 
   > div {
     background-color: black;
@@ -28,6 +35,12 @@ $height: 20rem;
     overflow: hidden;
     transform: scale(1);
     transition: all 0.35s;
+    @include media('<medium') {
+      position: relative;
+      min-width: 320px;
+      width: 100%;
+      height: 100%;
+    }
     &:hover {
       transform: scale(1.04);
     }
@@ -46,7 +59,7 @@ $height: 20rem;
     font-size: 1.3rem;
     width: 100%;
     padding: 0 1rem;
-    padding-top: 18%;
+    padding-top: 22%;
     background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1) 70%);
   }
 
@@ -67,9 +80,10 @@ $height: 20rem;
 
     .label {
       position: absolute;
-      top: 30%;
+      top: 35%;
       height: 70%;
-      padding-top: 30%;
+      text-align: center;
+      padding-top: 38%;
       background: linear-gradient(rgba(0, 0, 0, 0) 10%, rgba(0, 0, 0, 1) 60%);
     }
   }
