--- a/src/components/explore/List/List.module.scss
+++ b/src/components/explore/List/List.module.scss
@@ -3,6 +3,10 @@
 .list {
   width: 100%;
   height: 250px;
+  @include media('<medium') {
+    padding-left: 3%;
+    padding-right: 3%;
+  }
   ::-webkit-scrollbar {
     height: 10px;
     width: 10px;
