--- a/src/components/repository/Overview/Overview.module.scss
+++ b/src/components/repository/Overview/Overview.module.scss
@@ -40,6 +40,9 @@
       }
       .ratio {
         font-size: 0.95rem;
+        @include media('<medium') {
+          display: none;
+        }
       }
     }
   }
@@ -52,6 +55,10 @@
   width: 100%;
   height: 400px;
   text-align: end;
+  @include media('<medium') {
+    margin-bottom: 20%;
+  }
+
   img {
     width: 100%;
     height: 100%;
