--- a/src/components/trends/Search/Search.module.scss
+++ b/src/components/trends/Search/Search.module.scss
@@ -9,8 +9,15 @@
   justify-content: center;
   align-items: center;
   color: white;
+  @include media('<medium') {
+    height: 15rem;
+  }
   h3 {
     margin-bottom: 3rem;
+    @include media('<medium') {
+      font-size: 1.2rem;
+      margin-bottom: 1.5rem;
+    }
   }
 }
 
