--- a/src/components/auth/AuthForm/AuthForm.module.scss
+++ b/src/components/auth/AuthForm/AuthForm.module.scss
@@ -13,7 +13,7 @@
   }
   .form {
     display: flex;
-    width: 400px;
+    width: 100%;
     flex-direction: column;
     justify-content: center;
   }
