--- a/src/components/base/Dropdown/MobileMenubar.module.scss
+++ b/src/components/base/Dropdown/MobileMenubar.module.scss
@@ -11,7 +11,8 @@
 
   .wrapper {
     position: absolute;
-    top: 10%;
+    width: 100%;
+    top: 3.9rem;
     left: 0;
     right: auto;
     .menu {
@@ -23,6 +24,9 @@
       div {
         padding: 0.25rem 0.5rem;
         cursor: pointer;
+      }
+      input {
+        width: 100%;
       }
       a {
         font-weight: 400;
