--- a/src/components/mindmap/Aside/Aside.module.scss
+++ b/src/components/mindmap/Aside/Aside.module.scss
@@ -9,20 +9,27 @@ $boxWidth: 300px;
   flex-direction: column;
   align-items: center;
   height: 100%;
-  overflow-y: auto;
   padding-top: 4rem;
   padding-bottom: 3.5rem;
   position: absolute;
   bottom: 0;
   right: 0;
   box-shadow: $shadow2dp;
-  background-color: rgba(white, 1); /*99bddc  c5e6ef   baabcf */
+  background-color: rgba(white, 0.8); /*99bddc  c5e6ef   baabcf */
+  @include media('<medium') {
+    width: 100%;
+    height: 40%;
+    bottom: 3.5rem;
+    padding-top: 1rem;
+    padding-bottom: 0.5rem;
+  }
 }
 .recommendBoxList {
   position: relative;
   width: 100%;
   height: 100%;
-  padding: 1.4rem;
+  padding: 0.5rem 1.4rem;
+  overflow-y: auto;
 }
 .section {
   height: 100%;
