--- a/src/components/base/Card/Request/Request.module.scss
+++ b/src/components/base/Card/Request/Request.module.scss
@@ -52,6 +52,9 @@ $spaceImgToActivity: 1rem;
       }
     }
   }
+  .message {
+    font-weight: 600;
+  }
 }
 .feed + .feed {
   border-top: 1px solid $gray;
