--- a/src/components/group/People/People.module.scss
+++ b/src/components/group/People/People.module.scss
@@ -30,3 +30,60 @@
     cursor: default;
   }
 }
+
+.invite {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 999;
+  background-color: rgba(#000, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  > div {
+    border-radius: 1rem;
+    min-width: 300px;
+    width: 30%;
+    background-color: white;
+    padding: 1rem;
+    > div + div {
+      margin-top: 1rem;
+    }
+  }
+  .title {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 1.5rem;
+    font-weight: 500;
+  }
+  .close {
+    font-size: 2rem;
+    cursor: pointer;
+  }
+  .input {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    input {
+      width: 100%;
+    }
+    button {
+      margin: 0;
+      margin-top: 0.5rem;
+      width: 100%;
+    }
+  }
+  .list {
+    border-top: 1px solid $gray;
+    padding: 1rem 0;
+    > div {
+      box-shadow: $shadow2dp;
+      border: 1px solid $gray;
+      cursor: pointer;
+    }
+  }
+}
