--- a/src/components/mindmap/Comment/Comment.module.scss
+++ b/src/components/mindmap/Comment/Comment.module.scss
@@ -45,7 +45,6 @@
   }
 }
 .text {
-  flex: 1;
   background-color: white;
   border-radius: 0.5rem;
   padding: 0.5rem;
@@ -57,7 +56,7 @@
     letter-spacing: normal;
     word-spacing: normal;
     width: 100%;
-    height: 100%;
+    height: 3rem;
   }
 }
 .btns {
@@ -65,5 +64,46 @@
   justify-content: space-around;
   button {
     flex: 1;
+  }
+}
+.list {
+  border-top: 1px solid $gray;
+  border-bottom: 1px solid $gray;
+  padding: 1rem 0;
+  overflow-y: auto;
+  flex: 1;
+  .userImg {
+    width: 2rem;
+    height: 2rem;
+    img {
+      border-radius: 0.5rem;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .feedback {
+    font-size: 0.9rem;
+    background-color: white;
+    border-radius: 0.5rem;
+    margin: 0 0.5rem;
+    padding: 0.3rem;
+    flex: 1;
+  }
+  .userName {
+    font-weight: 600;
+  }
+  .time {
+    font-size: 0.7rem;
+    > time {
+      float: right;
+    }
+  }
+  > div {
+    display: flex;
+    align-items: center;
+    width: 100%;
+  }
+  > div + div {
+    margin-top: 1rem;
   }
 }
