--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -12,7 +12,7 @@
 $app_width: 1440px;
 $gray: #dadce0;
 $headerHeight: 4rem;
-$headerBGColor: #2f4e73;
+$headerBGColor: #4285f4;
 $primary: #4285f4;
 
 $SOCIETY_COLOR: #8854d0;
