--- a/src/components/mindmap/Footer/Footer.module.scss
+++ b/src/components/mindmap/Footer/Footer.module.scss
@@ -94,7 +94,7 @@
   width: 100%;
   padding: 0 3%;
   height: 3.5rem;
-  background-color: #2f4e73;
+  background-color: darken(white, 5%);
   display: flex;
   justify-content: space-between;
   color: white;
