--- a/src/components/mindmap/Header/Header.module.scss
+++ b/src/components/mindmap/Header/Header.module.scss
@@ -8,7 +8,7 @@
   position: absolute;
   top: 0;
   z-index: 900;
-  background-color: #2f4e73;
+  background-color: darken(white, 5%);
   display: flex;
   justify-content: space-between;
   box-shadow: $shadow2dp;
@@ -25,14 +25,13 @@
     }
   }
   .projectName {
-    color: white;
     font-size: 1.5rem;
     @include media('<medium') {
       font-size: 1.1rem;
     }
   }
   .groupName {
-    color: rgb(255, 208, 0);
+    color: #ff7043;
     font-size: 1.3rem;
     @include media('<medium') {
       font-size: 1rem;
