--- a/src/components/repository/Overview/Overview.module.scss
+++ b/src/components/repository/Overview/Overview.module.scss
@@ -107,6 +107,10 @@
   min-width: 240px;
   height: 100%;
   box-shadow: $shadow2dp;
+  border-radius: 1rem;
+  * {
+    border-radius: 1rem;
+  }
   .ideaimg {
     position: relative;
     background-color: white;
@@ -120,7 +124,7 @@
   }
   .ideahov {
     position: relative;
-    top: -193px;
+    top: -200px;
     width: 240px;
     height: 100%;
     display: flex;
@@ -128,7 +132,6 @@
     justify-content: flex-end;
     z-index: 1;
     .idealabel {
-      background-color: $gray;
       height: 3.4rem;
       padding: 1rem;
 
