--- a/src/components/mindmap/Comment/Comment.module.scss
+++ b/src/components/mindmap/Comment/Comment.module.scss
@@ -64,6 +64,8 @@
   justify-content: space-around;
   button {
     flex: 1;
+    padding: 0.5rem 0.3rem !important;
+    font-size: 0.8rem !important;
   }
 }
 .list {
