--- a/src/components/user/Header/Header.module.scss
+++ b/src/components/user/Header/Header.module.scss
@@ -8,14 +8,15 @@ $navHeight: 60px;
 .backgroundImg {
   background-color: rgb(238, 238, 238);
   width: 100%;
-  height: $backIMGHeight;
+  height: 100%;
   position: absolute;
   transition: background-color 100ms linear 0s;
   opacity: 0.5;
+  left: 0;
+  top: 0;
 }
 .userHeader {
   max-width: $app_width;
-  height: $backIMGHeight;
   display: flex;
   margin: 0 auto;
   @include media('<medium') {
@@ -25,14 +26,8 @@ $navHeight: 60px;
   }
   button {
     margin-top: $image_maxsize - $backIMGHeight;
+    margin-bottom: $image_maxsize - $backIMGHeight;
     border-radius: 50px;
-    @include media('<medium') {
-      padding-left: 8px;
-      padding-right: 8px;
-    }
-    @media (max-width: 330px) {
-      display: none;
-    }
   }
 }
 .userProfileImg {
@@ -52,6 +47,8 @@ $navHeight: 60px;
   .userImage {
     border-radius: 1rem;
     background-color: $gray;
+    margin-top: $image_maxsize - $backIMGHeight;
+    margin-bottom: $image_maxsize - $backIMGHeight;
     width: 100%;
     height: 100%;
   }
@@ -65,13 +62,10 @@ $navHeight: 60px;
   padding-top: $image_maxsize - $backIMGHeight;
   z-index: 10;
   button {
-    display: none;
-    @media (max-width: 325px) {
-      display: inline-block;
-      border-radius: 25px 25px;
-      padding: 20%;
-      float: left;
-    }
+    margin-top: $image_maxsize - $backIMGHeight;
+    margin-bottom: $image_maxsize - $backIMGHeight;
+    display: inline-block;
+    border-radius: 25px 25px;
   }
 }
 .userProfileName {
